3.x/setup-guides/admin-setup-guide.mdx
---
title: Admin
description: The admin part manages process-related entities and provides the REST API used by the **FlowX Designer**. The processes defined here will be handled by the [**FlowX Engine**](../docs/platform-deep-dive/core-components/flowx-engine).
icon: terminal
---

## Datasource configuration

To store process definitions the Admin microservice connects to the same Postgres / Oracle database as the Engine. Make sure to set the needed database connection details.

The following configuration details need to be added using environment variables:

* `SPRING_DATASOURCE_URL` - This environment variable is used to specify the URL of the database that the Admin microservice and Engine connect to. The URL typically includes the necessary information to connect to the database server, such as the host, port, and database name. It follows the format of the database's JDBC URL, which is specific to the type of database being used (e.g., PostgreSQL or Oracle).
* `SPRING_DATASOURCE_USERNAME` - This environment variable sets the username that the Admin microservice and Engine used to authenticate themselves when connecting to the database. The username is used to identify the user account that has access to the specified database.
* `SPRING_DATASOURCE_PASSWORD` - This environment variable specifies the password associated with the username provided in the `SPRING_DATASOURCE_USERNAME` variable. The password is used to authenticate the user and grant access to the database.

<Warning>
You will need to make sure that the user, password, connection link and db name are configured correctly, otherwise, you will receive errors at start time.
</Warning>

<Info>
The database schema is managed by a [liquibase](https://www.liquibase.org/) script provided with the Engine.
</Info>

## Kafka configuration

**Kafka** is used for saving audit logs and for using scheduled timer events. Only a producer needs to be configured. The environment variables that need to be set are:

* `KAFKA_BOOTSTRAP_SERVERS` - the Kafka bootstrap servers URL
* `KAFKA_TOPIC_AUDIT_OUT` - topic key for sending audit logs. Default value: `ai.flowx.audit.log`
* `KAFKA_TOPIC_PROCESS_START_FOR_EVENT_IN`
* `KAFKA_TOPIC_PROCESS_SCHEDULED_TIMER_EVENTS_OUT_SET`
* `KAFKA_TOPIC_PROCESS_SCHEDULED_TIMER_EVENTS_OUT_STOP`


## Redis configuration

The following values should be set with the corresponding Redis-related values:

* `SPRING_REDIS_HOST`
* `SPRING_REDIS_PASSWORD`

## Logging

The following environment variables could be set in order to control log levels:

* `LOGGING_LEVEL_ROOT` - root spring boot microservice logs
* `LOGGING_LEVEL_APP` - app level logs

## Authorization & access roles

The following variables need to be set in order to connect to the identity management platform:

* `SECURITY_OAUTH2_BASE_SERVER_URL`
* `SECURITY_OAUTH2_CLIENT_CLIENT_ID`
* `SECURITY_OAUTH2_REALM`

A specific service account should be configured in the OpenID provider to allow the Admin microservice to access realm-specific data. It can be configured using the following environment variables:

* `SECURITY_OAUTH2_SERVICE_ACCOUNT_ADMIN_CLIENT_ID` - the openid service account username
* `SECURITY_OAUTH2_SERVICE_ACCOUNT_ADMIN_CLIENT_SECRET` - the openid service account client secret

Configuration needed to clear the offline sessions of a user session from the identity provider solution:

* `FLOWX_AUTHENTICATE_CLIENTID` 

<Card title="Configuring access rights for admin" href="./access-management/configuring-access-rights-for-admin">
</Card>

## Elasticsearch

* `SPRING_ELASTICSEARCH_REST_URIS`
* `SPRING_ELASTICSEARCH_REST_DISABLESSL`
* `SPRING_ELASTICSEARCH_INDEX_SETTINGS_NAME` 
* `SPRING_ELASTICSEARCH_REST_USERNAME`
* `SPRING_ELASTICSEARCH_REST_PASSWORD`


## Undo/redo actions

```yaml
flowx:
	undo-redo:
	    ttl: 6000000   <---- redis ttl for undoable actions by user+nodeid (seconds)
	    cleanup:
	      cronExpression: 0 2 * * * * # every day at 2am   <---- when to run cleanup marked as deleted
	      days: 2   <----- marked as deleted will be deleted when older than days number
```
